feat: 5.게임 재시작 입력값 유효성 검사 추가